fix: tweak the engagement stat CSS colors/cutoffs.

--- a/src/app/components/deviantart/deviant-posts/deviant-posts.component.scss
+++ b/src/app/components/deviantart/deviant-posts/deviant-posts.component.scss
@@ -82,6 +82,13 @@ $max-deviation-width: 400px;
         }
     }
 
+    .heatmaps {
+        border: 1px solid $light-text-color;
+        margin-top: $large-spacing;
+        padding: $large-spacing;
+        overflow-x: scroll;
+    }
+
     section {
         max-height: $scroll-section-height;
         overflow-y: scroll;
